==> elehobica/RPi_Pico_WAV_Player/lib/st7735_80x160/lcd.c <==
#include "lcd.h"
#include "oledfont.h"

void LCD_Writ_Bus(u8 dat)
{
    OLED_CS_Clr();

    uint8_t *buff = (uint8_t *) &dat;
    spi_write_blocking(SPI_INST, buff, 1);

    OLED_CS_Set();
}

void spi_config(void)
{
    gpio_init(PIN_LCD_SCK);
    gpio_set_function(PIN_LCD_SCK, GPIO_FUNC_SPI);

    gpio_init(PIN_LCD_MOSI);
    gpio_set_function(PIN_LCD_MOSI, GPIO_FUNC_SPI);

    gpio_init(PIN_LCD_CS);
    gpio_set_dir(PIN_LCD_CS, GPIO_OUT);

    spi_init(SPI_INST, SPI_CLK_FREQ);

    /* SPI parameter config */
    spi_set_format(SPI_INST,
        8, /* data_bits */
        SPI_CPOL_0, /* cpol */
        SPI_CPHA_0, /* cpha */
        SPI_MSB_FIRST /* order */
    );

    OLED_CS_Set();
}

void LCD_Init(void)
{
    gpio_init(PIN_LCD_DC);
    gpio_set_dir(PIN_LCD_DC, GPIO_OUT);

    gpio_init(PIN_LCD_RST);
    gpio_set_dir(PIN_LCD_RST, GPIO_OUT);

#if HAS_BLK_CNTL
    gpio_init(PIN_LCD_BLK);
    gpio_set_dir(PIN_LCD_BLK, GPIO_OUT);
#endif

    spi_config();

    OLED_RST_Clr();
    sleep_ms(200);
    OLED_RST_Set();
    sleep_ms(20);
    OLED_BLK_Set();

    LCD_WR_REG(0x11);   // turn off sleep mode
    sleep_ms(100);

    LCD_WR_REG(0x21);   // display inversion mode

    LCD_WR_REG(0xB1);   // Set the frame frequency of the full colors normal mode
                        // Frame rate=fosc/((RTNA x 2 + 40) x (LINE + FPA + BPA +2))
                        // fosc = 850kHz
    LCD_WR_DATA8(0x05); // RTNA
    LCD_WR_DATA8(0x3A); // FPA
    LCD_WR_DATA8(0x3A); // BPA

    LCD_WR_REG(0xB2);   // Set the frame frequency of the Idle mode
                        // Frame rate=fosc/((RTNB x 2 + 40) x (LINE + FPB + BPB +2))
                        // fosc = 850kHz
    LCD_WR_DATA8(0x05); // RTNB
    LCD_WR_DATA8(0x3A); // FPB
    LCD_WR_DATA8(0x3A); // BPB

    LCD_WR_REG(0xB3);   // Set the frame frequency of the Partial mode/ full colors
    LCD_WR_DATA8(0x05);
    LCD_WR_DATA8(0x3A);
    LCD_WR_DATA8(0x3A);
    LCD_WR_DATA8(0x05);
    LCD_WR_DATA8(0x3A);
    LCD_WR_DATA8(0x3A);

    LCD_WR_REG(0xB4);
    LCD_WR_DATA8(0x03);

    LCD_WR_REG(0xC0);
    LCD_WR_DATA8(0x62);
    LCD_WR_DATA8(0x02);
    LCD_WR_DATA8(0x04);

    LCD_WR_REG(0xC1);
    LCD_WR_DATA8(0xC0);

    LCD_WR_REG(0xC2);
    LCD_WR_DATA8(0x0D);
    LCD_WR_DATA8(0x00);

    LCD_WR_REG(0xC3);
    LCD_WR_DATA8(0x8D);
    LCD_WR_DATA8(0x6A);

    LCD_WR_REG(0xC4);
    LCD_WR_DATA8(0x8D);
    LCD_WR_DATA8(0xEE);

    LCD_WR_REG(0xC5);  /*VCOM*/
    LCD_WR_DATA8(0x0E);

    LCD_WR_REG(0xE0);
    LCD_WR_DATA8(0x10);
    LCD_WR_DATA8(0x0E);
    LCD_WR_DATA8(0x02);
    LCD_WR_DATA8(0x03);
    LCD_WR_DATA8(0x0E);
    LCD_WR_DATA8(0x07);
    LCD_WR_DATA8(0x02);
    LCD_WR_DATA8(0x07);
    LCD_WR_DATA8(0x0A);
    LCD_WR_DATA8(0x12);
    LCD_WR_DATA8(0x27);
    LCD_WR_DATA8(0x37);
    LCD_WR_DATA8(0x00);
    LCD_WR_DATA8(0x0D);
    LCD_WR_DATA8(0x0E);
    LCD_WR_DATA8(0x10);

    LCD_WR_REG(0xE1);
    LCD_WR_DATA8(0x10);
    LCD_WR_DATA8(0x0E);
    LCD_WR_DATA8(0x03);
    LCD_WR_DATA8(0x03);
    LCD_WR_DATA8(0x0F);
    LCD_WR_DATA8(0x06);
    LCD_WR_DATA8(0x02);
    LCD_WR_DATA8(0x08);
    LCD_WR_DATA8(0x0A);
    LCD_WR_DATA8(0x13);
    LCD_WR_DATA8(0x26);
    LCD_WR_DATA8(0x36);
    LCD_WR_DATA8(0x00);
    LCD_WR_DATA8(0x0D);
    LCD_WR_DATA8(0x0E);
    LCD_WR_DATA8(0x10);

    LCD_WR_REG(0x3A);   // define the format of RGB picture data
    LCD_WR_DATA8(0x05); // 16-bit/pixel

    LCD_SetRotation(_rotation);
    /*
    // Memory data access control (MADCTL)
    LCD_WR_REG(0x36);
    if(_rotation==0)LCD_WR_DATA8(0x00 | (RGB_ORDER<<3));
    else if(_rotation==1)LCD_WR_DATA8(0xC0 | (RGB_ORDER<<3));
    else if(_rotation==2)LCD_WR_DATA8(0x70 | (RGB_ORDER<<3));
    else LCD_WR_DATA8(0xA0 | (RGB_ORDER<<3));
    */

    LCD_WR_REG(0x29);   // Display On
}
